@@ -17,6 +17,7 @@
 
 /* Includes */
 #include <sys/stat.h>
+#include <ctype.h>	/* Needed for toupper() only */
 #include <dirent.h>
 #include <stdlib.h>
 #include <string.h>
