@@ -1,3 +1,6 @@
+2011-01-07 Thunor <thunorsif_at_hotmail.com>
+* Added support for the mouse wheel: remapped as keyboard cursor keys.
+
 2010-12-20 Thunor <thunorsif_at_hotmail.com>
 * Added show_input_id to the rcfile (was a CLI option).
 * Implemented variable emulation speed but I haven't yet managed to
